# yuanrong

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .gitmodules.ci_bypass  .gitmodules.debug  .woodpecker.yml  BUILD.bazel  CLAUDE.md  Jenkinsfile  Jenkinsfile.v2  Makefile  README.md  WORKSPACE  build.sh  check_tools.sh  go.work  go.work.sum  install_tools.sh  test_dr_kill_e2e.py
.buildkite/: README.html  build_ci_component_images.sh  download_obs_artifacts.py  (+13 more)
api/go/: BUILD.bazel  go.mod
api/go/example/: stream_example.go
api/go/faassdk/: runtime.go
api/go/faassdk/common/faasscheduler/: proxy.go  proxy_test.go
api/go/faassdk/handler/: mock_utils_test.go
api/go/faassdk/handler/event/: handler_test.go
api/go/faassdk/handler/http/: custom_container_handler.go  custom_container_handler_test.go  state_test.go
api/go/faassdk/handler/http/crossclusterinvoke/: invoker.go  invoker_test.go
api/go/faassdk/sts/: sts.go  sts_test.go
api/go/faassdk/types/: types.go
api/go/libruntime/: libruntime.go
api/go/libruntime/api/: api.go  route_update_error.go  route_update_error_test.go  types.go
api/go/libruntime/clibruntime/: clibruntime.go  clibruntime_test.go
api/go/libruntime/common/: config.go  config_test.go
api/go/libruntime/config/: config.go
api/go/libruntime/cpplibruntime/: BUILD.bazel  clibruntime.h  cpplibruntime.cpp
api/go/libruntime/cpplibruntime/mock/: mock_cpplibruntime.cpp
api/go/libruntime/libruntimesdkimpl/: libruntimesdkimpl.go  libruntimesdkimpl_test.go
api/go/libruntime/libruntimesdkimpl/routecache/: route_cache.go  route_cache_test.go
api/go/posixsdk/: runtime.go
api/go/yr/: cluster_mode_runtime.go  cluster_mode_runtime_test.go  function_handler.go  instance_function_handler.go  named_instance.go  object_ref.go  runtime.go  stream.go  stream_test.go
api/java/function-common/src/main/cpp/: BUILD.bazel  com_yuanrong_jni_LibRuntime.cpp  com_yuanrong_jni_Producer.cpp  com_yuanrong_jni_Producer.h  jni_types.cpp  jni_types.h  org_yuanrong_jni_LibRuntime.cpp  org_yuanrong_jni_LibRuntime.h
api/python/: BUILD.bazel  requirements.txt  requirements_for_py36.txt  requirements_for_py37.txt  server.py  setup.py  wheel_platform.py
api/python/tests_standalone/: test_cluster_launcher.py  test_component_base.py  test_init_integration.py  test_integration.py  test_process_utils.py  test_service_manager.py
api/python/yr/: __init__.py  apis.py  base_runtime.py  checkpoint.py  cluster_launcher.py  cluster_mode_runtime.py  code_manager.py  config.py  config_manager.py  err_type.py  exception.py  fnruntime.pyx  group.py  log.py  metrics.py  object_ref.py  process_utils.py  runtime.py  runtime_holder.py  service_manager.py  session_service.py  trace.py
api/python/yr/accelerate/: shm_broadcast.py
api/python/yr/cli/: __init__.py  checkpoint.py  config.py  config.toml.jinja  exec.py  main.py  scripts.py  system_launcher.py  utils.py  values.toml
api/python/yr/cli/component/: base.py  faas_frontend.py  faas_scheduler.py  frontend.py  function_scheduler.py  registry.py  runtime_launcher.py
api/python/yr/common/: utils.py
api/python/yr/debug_server/: __init__.py
api/python/yr/decorator/: function_proxy.py  instance_proxy.py
api/python/yr/executor/: executor.py  faas_executor.py  faas_handler.py  function_handler.py
api/python/yr/functionsdk/: context.py  function.py
api/python/yr/includes/: libruntime.pxd
api/python/yr/inner/: scripts.py
api/python/yr/local_mode/: instance.py  local_client.py  local_mode_runtime.py  task_manager.py  worker.py
api/python/yr/main/: yr_runtime_main.py
api/python/yr/sandbox/: __init__.py  filesystem.py  sandbox.py  tunnel_client.py  tunnel_protocol.py  tunnel_server.py
api/python/yr/serialization/: serializers.py
api/python/yr/tests/: BUILD.bazel  benchmark_tunnel.py  test_apis.py  test_cli_delete_e2e.py  test_cli_scripts.py  test_common.py  test_decorator.py  test_exception_structured.py  test_exec_cp.py  test_exec_heartbeat.py  test_faas_handler.py  test_function_handler.py  test_functionsdk.py  test_load_env_from_file.py  test_local_mode.py  test_metrics.py  test_sandbox_internal_urls.py  test_sandbox_tunnel.py  test_sandbox_type.py  test_trace_id.py  test_tunnel_client.py  test_tunnel_client_logging.py  test_tunnel_client_shutdown.py  test_tunnel_integration.py  test_tunnel_protocol.py  test_tunnel_server.py
patch/: BUILD.bazel
src/utility/metrics/: BUILD.bazel
src/utility/metrics/api/: processor_actor.cpp
src/utility/metrics/api/include/: gauge.h  meter.h  processor_actor.h
src/utility/metrics/common/file/: file_sink.cpp  file_utils.cpp
src/utility/metrics/common/include/: metric_logger.h  transfer.h  utils.h  validate.h
src/utility/metrics/exporters/common/: sensitive_data.cpp  ssl_config.cpp
src/utility/metrics/exporters/file_exporter/: file_exporter.cpp  file_utils.cpp  metric_file_sink.cpp  metric_logger.cpp
src/utility/metrics/exporters/file_exporter/include/: file_exporter.h  json_parser.h  metric_logger.h
src/utility/metrics/exporters/http_exporter/: http_exporter.cpp  http_heartbeat_client.cpp  http_heartbeat_client.h  http_heartbeat_observer.cpp  http_heartbeat_observer.h
src/utility/metrics/exporters/opentelemetry_exporter/: factory_impl.cpp  opentelemetry_exporter.cpp
src/utility/metrics/exporters/prometheus_push_exporter/: prometheus_push_exporter.cpp
src/utility/metrics/include/metrics/exporters/: serializer.h
src/utility/metrics/include/metrics/sdk/: meter_provider.h  metric_exporter.h
src/utility/metrics/sdk/: alarm.cpp  batch_export_processor.cpp  counter.cpp  immediately_export_processor.cpp  litebus_manager.cpp  meter.cpp  meter_provider.cpp  observable_registry.cpp  observe_actor.cpp  processor_actor.cpp  storage.cpp
src/utility/metrics/sdk/include/: basic_exporter.h  meter_provider.h  observable_registry.h  observe_actor.h  observer_result_t.h  processor_actor.h  storage.h
test/libruntime/mock/: BUILD.bazel  mock_datasystem.h  mock_datasystem_client.cpp  mock_datasystem_client_wrapper.h  mock_fs_intf_with_callback.h  mock_invoke_adaptor.h
(+954 files in other folders)
