load("//bazel:yr.bzl", "COPTS", "LOPTS", "cc_strip", "copy_file", "pyx_library")
load("@rules_python//python:defs.bzl", "py_library", "py_runtime", "py_runtime_pair")
load("@python3_9//:defs.bzl", "interpreter")

py_runtime(
    name = "python3_runtime",
    interpreter = interpreter,
    python_version = "PY3",
    visibility = ["//visibility:private"],
)

py_runtime_pair(
    name = "python_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":python3_runtime",
    visibility = ["//visibility:private"],
)

constraint_setting(name = "hermetic")

constraint_value(
    name = "hermetic_python",
    constraint_setting = ":hermetic",
)

toolchain(
    name = "python_toolchain",
    exec_compatible_with = [":hermetic_python"],
    toolchain = ":python_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

platform(
    name = "hermetic_python_platform",
    constraint_values = [":hermetic_python"],
    parents = ["@local_config_platform//:host"],
    visibility = ["//visibility:private"],
)

pyx_library(
    name = "fnruntime",
    srcs = glob([
        "yr/__init__.py",
        "yr/fnruntime.pyx",
        "yr/includes/*.pxd",
        "yr/includes/*.pxi",
    ]),
    cc_kwargs = dict(
        copts = COPTS + select({
            "//:disable_datasystem": [],
            "//conditions:default": ["-DENABLE_DATASYSTEM"],
        }),
    
    ),
    visibility = ["__subpackages__"],
    deps = [
        "//:runtime_lib",
    ],
)

copy_file(
    name = "cp_server_py",
    srcs = ["server.py"],
    dstdir = "build/output/runtime/service/python/fnruntime",
)

filegroup(
    name = "python_sources",
    srcs = glob([
        "yr/**/*.py",
    ]),
)

cc_strip(
    name = "py_strip",
    srcs = ["yr/fnruntime.so"],
)

genrule(
    name = "yr_python_pkg",
    srcs = [
        "py_strip",
        "//api/python:cp_server_py",
        ":python_sources",
        ":libruntime_proto_py",
        ":sync_libruntime_proto_workspace",
    ],
    outs = ["yr_python_pkg.out"],
    cmd = """
        BASE_DIR="$$(pwd)"
        PYTHON_SERVICE_DIR=$$BASE_DIR/build/output/runtime/service/python
        PYTHON_SDK_DIR=$$BASE_DIR/build/output/runtime/sdk/python
        PYTHON_CODE_DIR=$$BASE_DIR/api/python
        mkdir -p $$PYTHON_SERVICE_DIR/fnruntime
        mkdir -p $$PYTHON_SDK_DIR/
        chmod +w $(location py_strip) &&
        chmod +w $$PYTHON_CODE_DIR/yr &&
        chmod +w $$PYTHON_SERVICE_DIR/ &&
        if [[ "$$(uname)" != "Darwin" ]]; then chrpath -r '$$ORIGIN' $(location py_strip) 2>/dev/null || true; fi &&
        PYTHON3_BIN_PATH=$${PYTHON3_BIN_PATH:-python3}
        PYTHON_VERSION=$$($$PYTHON3_BIN_PATH --version 2>&1) &&
        echo $$PYTHON_VERSION > $@
        EXT_SUFFIX=$$($$PYTHON3_BIN_PATH - <<'PY'
import sysconfig
print(sysconfig.get_config_var("EXT_SUFFIX") or ".so")
PY
        ) &&
        cp -R $(location py_strip) $$PYTHON_CODE_DIR/yr/fnruntime$$EXT_SUFFIX &&
        cd $$BASE_DIR
        echo "$$BASE_DIR" >> $@
    """,
    local = 1,
)

genrule(
    name = "libruntime_proto_py",
    srcs = [
        "//src/proto:libruntime_py_proto",
    ],
    outs = ["yr/libruntime_pb2.py"],
    cmd = """
        mkdir -p "$(@D)"
        cp "$(location //src/proto:libruntime_py_proto)" "$@"
    """,
    local = 1,
    tags = ["no-cache"],
)

genrule(
    name = "sync_libruntime_proto_workspace",
    srcs = [
        ":libruntime_proto_py",
        "//:WORKSPACE",
    ],
    outs = ["libruntime_proto_workspace_sync.out"],
    cmd = """
        PYTHON3_BIN_PATH=$${PYTHON3_BIN_PATH:-python3}
        WORKSPACE_DIR=$$($$PYTHON3_BIN_PATH -c 'import os,sys; print(os.path.dirname(os.path.realpath(sys.argv[1])))' "$(location //:WORKSPACE)")
        mkdir -p "$$WORKSPACE_DIR/api/python/yr"
        rm -f "$$WORKSPACE_DIR/api/python/yr/libruntime_pb2.py"
        install -m 0644 "$(location :libruntime_proto_py)" "$$WORKSPACE_DIR/api/python/yr/libruntime_pb2.py"
        date > "$@"
    """,
    local = 1,
    stamp = 1,
    tags = [
        "local",
        "no-cache",
        "no-sandbox",
        "no-remote",
    ],
)

py_library(
    name = "yr_lib",
    srcs = glob(
        ["yr/**/*.py"],
        exclude = ["yr/tests/*.py"],
    ),
    data = [
        "yr/fnruntime.so",
        ":libruntime_proto_py",
    ],
    visibility = ["__subpackages__"],
)
